class activies 5-8 update

--- a/02-Advanced-CSS/01-Activities/05-Ins_Responsive-Design/index.html
+++ b/02-Advanced-CSS/01-Activities/05-Ins_Responsive-Design/index.html
@@ -11,15 +11,19 @@
       <h1>Responsive Web Design</h1>
       <p>Watch what happens to the navbar links when the screen hits 780px!</p>
     </header>
-
+    
+    <!-- flex container -->
     <nav>
+      <!-- flex items -->
       <a href="#">Link 1</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
       <a href="#">Link 4</a>
     </nav>
 
+    <!-- Flex container -->
     <main>
+      <!-- Flex items --> 
       <aside>
         <h2>This is a sidebar.</h2>
         <div class="sample-img">Image</div>
