--- a/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/index.html
+++ b/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/index.html
@@ -38,6 +38,13 @@
         </div>
         <div class="resources">
           <!-- TODO: Add resource links -->
+          <h1>Show Resources</h1>
+          <ul class="Links">
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Responsive_Design">MDN Web Docs on Responsive Design</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries">MDN Web Docs on Using Media Queries</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox">MDN Web Docs on Flexbox</a></li>
+            
+          </ul>
         </div>
       </article>
     </section>
