--- a/02-Advanced-CSS/01-Activities/18-Stu_Pseudo-Elements/Unsolved/index.html
+++ b/02-Advanced-CSS/01-Activities/18-Stu_Pseudo-Elements/Unsolved/index.html
@@ -28,7 +28,7 @@
           <div>
             <p>
               <!-- TODO: Choose a term or phrase that you want to apply a tooltip to -->
-              Cascading Style Sheets is a style sheet language that describes
+              <span data-text="CSS is awesome">Cascading Style Sheets</span>  is a style sheet language that describes
               the presentation of a webpage. If HTML is the skeleton of a
               webpage, then CSS is the meat on the bones. Whereas HTML strictly
               pertains to webpage markup, CSS deals with colors, aesthetics, and
@@ -55,7 +55,7 @@
               properties in CSS, and they can be modified in various specific
               ways. Don't expect to memorize all of the formatting options
               available through CSS. For many of your early weeks and months as
-              a developer, you'll need to continually reference websites to find
+              a developer, you'll need to continually reference <span data-text="Look at website">websites</span> to find
               the exact syntax.
             </p>
             <p>
@@ -70,12 +70,12 @@
             <ul class="links">
               <li>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::before">
-                  MDN web docs on ::before
+                  Before
                 </a>
               </li>
               <li>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::after">
-                  MDN web docs on ::after
+                  After
                 </a>
               </li>
 
