--- a/02-Advanced-CSS/01-Activities/29-mini-project/index.html
+++ b/02-Advanced-CSS/01-Activities/29-mini-project/index.html
@@ -13,25 +13,37 @@
         <p>Ever have trouble recalling the exact syntax for your favorite CSS code? Give it a permanet home and add it to his page! Select any snippet below and it'll automatically select all of the code for you to copy.</p>
     </header>
     <main>
-        <div>
+        <div class="card">
             <h2>Flexbox Row</h2>
             <p>Use these three properties to create a flexbox row layout.</p>
+            <span> .row { <br>
+                    display: flex; <br>
+                    flex-direction: row; <br>
+                    flex-wrap: wrap; <br>
+                } <br>
+            </span>
+            </p>
         </div>
-        <div>
+        <div class="card">
             <h2>Flexbox Column</h2>
             <p>Use this to create a Flexbox column layout</p>
+           
         </div>
-        <div>
+        <div class="card">
             <h2>CSS Grid Layout</h2>
             <p>Build a 12-column layout using CSS grid</p>
+
         </div>
+        <div class="card">
             <h2>Linear Gradients</h2>
             <p>This will create a background linear gradient from top to bottom</p>
-        <div>
+            <span>background: linear-gradient( #da60df4d, #e866ec99)</span>
+        </div>
+        <div class="card">
             <h2>Box Transition Glow</h2>
             <p>Use transition and box shadow to glow on hover</p>
         </div>
-        <div>   
+        <div class="card">   
         <h2>Overlay Card with Title</h2>
         <p>Use position properties to negative margins to raise elements higher than their natural starting point.</p>
         </div> 
