updating class folder

--- a/06-Server-Side-APIs/01-Activities/22-Stu_Mini-Project/index.html
+++ b/06-Server-Side-APIs/01-Activities/22-Stu_Mini-Project/index.html
@@ -38,6 +38,8 @@
         </form>
       </div>
     </div>
+    <img src="" alt="">
+    <div class="example"></div>
 
     <script src="./script.js"></script>
   </body>
